# OLLA

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  OPTIMIZATION_PLAN.md  QUICKSTART.md  README.md  README_PART1_MVP.md  README_PART2_SCALE.md  README_PHASE_2_3.md  cli.py  hybrid_search_for_agents.md  hybrid_warm  pyproject.toml  railway.json  render.yaml  requirements.txt  result.md  run.py  smoke_test.py  test_deep.py  test_routes.py  update_dashboard.py
.github/workflows/: ci.yml
app/: config.py  container.py  main.py
app/api/: rbac.py
app/api/middleware/: __init__.py  auth.py  rate_limit.py  tracing.py  usage_meter.py
app/api/routes/: admin.py  billing.py  dashboard.py  feedback.py  graph.py  health.py  hybrid.py  keys.py  search.py  semantic.py  sources.py  workspaces.py
app/core/config/: settings.py
app/core/errors/: exceptions.py  handlers.py
app/core/logging/: setup.py
app/core/utils/: circuit_breaker.py  retry.py
app/db/: session.py
app/db/migrations/: env.py
app/domain/interfaces/: embedding_model.py  search_provider.py
app/domain/models/: citation.py  search.py
app/domain/services/: content_processor.py  search_orchestrator.py
app/infrastructure/cache/: in_memory_cache.py  redis_cache.py
app/infrastructure/embeddings/: bge_local.py  openai_embeddings.py
app/infrastructure/fetchers/: jina_reader.py
app/infrastructure/http/: client.py
app/infrastructure/persistence/: postgres_repository.py
app/infrastructure/search/: brave.py  duckduckgo.py
app/models/: request.py  response.py
app/models/db/: __init__.py  agent_trace.py  api_key.py  chunk.py  chunk_edge.py  feedback.py  query.py  result.py  source_trust.py  usage_event.py  user.py  workspace.py
app/services/: answer_service.py  cache_service.py  chunk_service.py  citation_service.py  citation_verifier_service.py  clean_service.py  confidence_service.py  credibility_service.py  diversity_service.py  embed_service.py  entity_service.py  export_service.py  feedback_service.py  fetch_service.py  freshness_service.py  graph_service.py  import_service.py  memory_service.py  pipeline.py  query_classifier_service.py  query_expansion_service.py  rank_service.py  rerank_service.py  retention_service.py  retrieval_router.py  sanitize_service.py  scoring_service.py  search_service.py  source_trust_service.py  sources_service.py  store_service.py
docker/: Dockerfile  docker-compose.yml
docs/: REMAINING_FEATURES.md  VERIFICATION_CHECKLIST.md
eval/: __init__.py  benchmark_report.md  dataset.py  metrics.py  run_eval.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: 3d-models.js
frontend/src/: App.css  App.tsx  index.css
mcp_server/: server.py
scripts/: check_frontend.py  check_schema.py  run_eval_wrapper.py  test_routes.py  verify_step4.py  verify_step8_10b.py  verify_step8_10c.py  verify_steps_4_10.py  verify_steps_6_10.py  verify_steps_8_10.py
tests/: conftest.py  test_chunk_hierarchical.py  test_chunk_service.py  test_clean_service.py  test_eval_metrics.py  test_freshness_service.py  test_phase10_quality.py  test_privacy_config.py  test_query_classifier.py  test_rank_service.py  test_scoring_service.py  test_search_endpoint.py
tests/e2e/: conftest.py  test_api.py
tests/integration/: conftest.py  test_postgres_repository.py
tests/unit/domain/: test_ranking_engine.py  (+2 more)
(+15 files in other folders)
