[project]
name = "hybrid-search-agents"
version = "0.1.0"
description = "Web retrieval system for AI agents and RAG applications"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "duckduckgo-search>=6.4.1",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis[asyncio]>=5.0.0",
    "openai>=1.0.0",
    "pgvector>=0.2.0",
    "numpy>=1.24.0",
    "mcp>=1.0.0",
    "psycopg[binary,pool]>=3.2.0",
    "sentence-transformers>=5.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
