[project]
name = "hybrid-search-agents"
version = "0.1.0"
description = "Web retrieval system for AI agents and RAG applications"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "duckduckgo-search>=6.4.1",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis[asyncio]>=5.0.0",
    "openai>=1.0.0",
    "pgvector>=0.2.0",
    "numpy>=1.24.0",
    "mcp>=1.0.0",
    "psycopg[binary,pool]>=3.2.0",
    "sentence-transformers>=5.5.0",
    "structlog>=24.0.0",
    "dependency-injector>=4.41.0",
]

[project.scripts]
hybrid-search = "cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "flake8-bugbear>=24.0.0",
    "mypy>=1.10.0",
    "types-redis>=4.6.0",
    "pre-commit>=3.7.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["app", "cli"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["app/db/migrations", "archive", "frontend", "scripts"]

[tool.ruff.lint]
# E4/E7/E9 = real pycodestyle errors, F = pyflakes (unused imports / undefined
# names). Formatting-only nitpicks (line length, quotes) are intentionally
# left out so the lint gate flags genuine problems, not style noise.
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_strict_optional = true
warn_unused_configs = true
exclude = ["tests/", "docs/", "app/db/migrations/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests that require a real database and Redis",
    "e2e: marks end-to-end tests that make real network calls",
]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/migrations/*", "*/conftest.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = true
fail_under = 60
